@@ -45,6 +45,7 @@ Version 1.7.5+svn:
    * Avoid an assertion failure if haloes are disabled (bug #14297)
    * Fixed linked widgets not getting deregistered upon destruction
    * Fix huge fonts on storyscreens with tiny GUI
+   * Fix cmake po-update not doing line wrapping properly
 
 Version 1.7.5:
  * Campaigns:
